# compare-sql

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
src/cmp_sql/: cli.py  differ.py  normalizer.py  pairing.py  parser.py  reporter_html.py  reporter_text.py  runner.py  semantic.py  types.py
templates/: side_by_side.html.j2
tests/: test_normalizer.py  test_pairing.py  test_parser.py  test_runner_end_to_end.py
tests/fixtures/different/src/: orders.sql
tests/fixtures/different/tgt/: orders.sql
tests/fixtures/identical/tgt/: emp.sql
tests/fixtures/missing/src/: only_in_src.sql
tests/fixtures/missing/tgt/: only_in_tgt.sql
tests/fixtures/normalized/src/: dept.sql
tests/fixtures/normalized/tgt/: dept.sql
tests/fixtures/semantic/src/: active_emp.sql
tests/fixtures/semantic/tgt/: active_emp.sql
tests/fixtures/unparseable/src/: pkg_foo.sql
tests/fixtures/unparseable/tgt/: pkg_foo.sql
