[project]
name = "cmp-sql"
version = "0.1.0"
description = "Oracle DDL AST comparator: code_sql vs db_sql via sqlglot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pygments>=2.17.0",
    "tqdm>=4.66.0",
]

[project.scripts]
cmp-sql = "cmp_sql.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmp_sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
